feat: funcionalidade de listar eventos recentes e eventos principais